@@ -25,6 +25,7 @@
 #include <linux/buffer_head.h>
 #include <linux/blkdev.h>
 
+#include "attrib.h"
 #include "inode.h"
 #include "debug.h"
 #include "ntfs.h"
