@@ -20,8 +20,9 @@
  * Foundation,Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
 
-#include "dir.h"
 #include "debug.h"
+#include "dir.h"
+#include "endian.h"
 #include "malloc.h"
 #include "ntfs.h"
 
